welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:5: error: not found: value o
	for (i <- o to tab.length-1) {
                  ^